--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <style>
         * {
             box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
 
         body {
@@ -20,6 +22,7 @@
             position: relative;
             border-radius: 300px;
             overflow: hidden;
+            box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.75);
         }
 
         #八卦>div:first-child {
@@ -82,7 +85,7 @@
         }
 
         #八卦 {
-            animation: rotate 1.5s linear infinite;
+            animation: rotate 10s linear infinite;
         }
 
         @keyframes rotate {
@@ -90,19 +93,33 @@
                 transform: rotate(360deg);
             }
         }
+        #八卦-wrapper{
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+        #八卦-描述{
+            margin-top: 1em;
+        }
     </style>
 </head>
 
 <body>
-    <div id="八卦">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+    <div id="八卦-wrapper">
+        <div id="八卦">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div id="八卦-描述">
+            道可道，非常道
+        </div>
     </div>
-    <div>道可道，非常道</div>
 </body>
 
 </html>
